vs_canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webservice-vs
spec: 
  hosts:
    - webservice
  http:
  - match:
    - headers:
        x-client-id: 
          exact: "test"
    route:
    - destination:
        host: webservice
        subset: v1
      weight: 10
    - destination:
        host: webservice
        subset: v0
      weight: 90
  - route:
    - destination:
        host: webservice
        subset: v0
